[package]
name = "reval"
version = "0.1.3"
edition = "2021"
rust-version = "1.60"
authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Simple Rust expression evaluator"
repository = "https://github.com/mendelt/reval"
documentation = "https://docs.rs/reval/latest/reval/"
keywords = ["expression", "evaluator"]
readme = "README.md"

[dependencies]
async-recursion = "1"
async-trait = "0.1"
anyhow = "1"
displaydoc = "0.2"
nom = { version = "7", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[features]
default = ["json_parser", "value_serializer"]
nom_parser = ["dep:nom"]
json_parser = ["dep:serde", "dep:serde_json"]
value_serializer = ["dep:serde"]
