[package]
name = "reval"
version = "0.7.8"
edition = "2021"
rust-version = "1.74.1"
authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Simple Rust expression evaluator"
repository = "https://github.com/mendelt/reval"
documentation = "https://docs.rs/reval/latest/reval/"
keywords = ["expression", "evaluator"]
readme = "README.md"
autotests = false

[dependencies]
anyhow = "1"
async-recursion = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.12"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
lazy_static = "1"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
unicode-xid = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[build-dependencies]
lalrpop = "0.20.0"

[[test]]
name = "integration"
path = "tests/mod.rs"
